Removed the directory paths

--- a/IBM Watson Speech to text.ipynb
+++ b/IBM Watson Speech to text.ipynb
@@ -16,14 +16,14 @@
     "from watson_developer_cloud import SpeechToTextV1\n",
     "import os\n",
     "from os import path\n",
-    "audio_filepath = path.join(\"D:\\\\GA\", \"Splitted Waves\")\n",
+    "audio_filepath = path.join(\"Path to directory", \"Splitted Waves\")\n",
     "print(audio_filepath)\n",
     "files = os.listdir(audio_filepath)\n",
     "\n",
     "\n",
     "speech_to_text = SpeechToTextV1(\n",
-    "    username='551fe97c-87a3-466e-93db-a0446af989ad',\n",
-    "    password='Ai3KxjOFqXho',\n",
+    "    username='Username',\n",
+    "    password='password',\n",
     "    x_watson_learning_opt_out=False\n",
     ")\n",
     "\n",
@@ -90,14 +90,14 @@
     "url = 'https://stream.watsonplatform.net/speech-to-text/api/v1/recognize' \n",
     "\n",
     "# bluemix authentication username \n",
-    "username = '551fe97c-87a3-466e-93db-a0446af989ad' \n",
+    "username = 'username' \n",
     "\n",
     "# bluemix authentication password \n",
-    "password = 'Ai3KxjOFqXho' \n",
+    "password = 'password' \n",
     "\n",
     "headers={'Content-Type': 'audio/wav'} \n",
     "\n",
-    "audio = open('D:\\GA\\Splitted Waves\\Elliston Lecture 04-28-81 Mark Strand 1.wav',\n",
+    "audio = open('Path to the file',\n",
     "          'rb')\n",
     "\n",
     "result = requests.post(url, data=audio, headers=headers, auth=(username, password)).text \n",
@@ -124,14 +124,14 @@
     "import speech_recognition as sr\n",
     "r = sr.Recognizer()\n",
     "\n",
-    "with sr.AudioFile('D:\\GA\\Splitted Waves\\Elliston Lecture 04-28-81 Mark Strand 1.wav') as source:\n",
+    "with sr.AudioFile('path to the wave file') as source:\n",
     "    audio = r.record(source) \n",
     "\n",
     "# bluemix authentication username \n",
-    "username = '551fe97c-87a3-466e-93db-a0446af989ad' \n",
+    "username = 'username' \n",
     "\n",
     "# bluemix authentication password \n",
-    "password = 'Ai3KxjOFqXho' \n",
+    "password = 'password' \n",
     "try:\n",
     "    print(r.recognize_ibm(audio, username=username, password=password))\n",
     "except sr.UnknownValueError:\n",
