--- a/IBM Watson Speech to text.ipynb
+++ b/IBM Watson Speech to text.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "\n",
     "speech_to_text = SpeechToTextV1(\n",
-    "    username='Username',\n",
+    "    username='username',\n",
     "    password='password',\n",
     "    x_watson_learning_opt_out=False\n",
     ")\n",
