Updated the IBM file

--- a/IBM Watson Speech to text.ipynb
+++ b/IBM Watson Speech to text.ipynb
@@ -16,14 +16,16 @@
     "from watson_developer_cloud import SpeechToTextV1\n",
     "import os\n",
     "from os import path\n",
-    "audio_filepath = path.join(\"Path to directory", \"Splitted Waves\")\n",
+    "audio_filepath = path.join(\"path to directory for wave files\", \"directory\")\n",
     "print(audio_filepath)\n",
     "files = os.listdir(audio_filepath)\n",
     "\n",
     "\n",
     "speech_to_text = SpeechToTextV1(\n",
-    "    username='username',\n",
-    "    password='password',\n",
+    "    # bluemix authentication username \n",
+    "    username = 'username', \n",
+    "    # bluemix authentication password \n",
+    "    password = 'password', \n",
     "    x_watson_learning_opt_out=False\n",
     ")\n",
     "\n",
@@ -97,7 +99,7 @@
     "\n",
     "headers={'Content-Type': 'audio/wav'} \n",
     "\n",
-    "audio = open('Path to the file',\n",
+    "audio = open('path to wave file',\n",
     "          'rb')\n",
     "\n",
     "result = requests.post(url, data=audio, headers=headers, auth=(username, password)).text \n",
@@ -124,7 +126,7 @@
     "import speech_recognition as sr\n",
     "r = sr.Recognizer()\n",
     "\n",
-    "with sr.AudioFile('path to the wave file') as source:\n",
+    "with sr.AudioFile('path to wave file') as source:\n",
     "    audio = r.record(source) \n",
     "\n",
     "# bluemix authentication username \n",
